# SachetAI-pathway

./: .env  .env.example  .gitignore  ARCHITECTURE.md  README.md  __init__.py  config.py  groq-client.py  main.py  pyproject.toml  run.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/api/: base.js  chatApi.js  refreshApi.js  statusApi.js  voiceRecorder.js
Frontend/src/components/: ChatArea.jsx  Modal1.jsx  ProfileDropdown.jsx  QuickActions.jsx  Sidebar.jsx
Frontend/src/components/AlertFeed/: AlertCritical.jsx  AlertResolved.jsx  AlertWarning.jsx  MaharashtraMap.jsx  index.jsx
Frontend/src/hooks/: useSidebar.js
Frontend/src/layout/: MainLayout.jsx
api/: __init__.py  server.py
data_sources/: __init__.py  ndrf_connector.py  newsapi_connector.py
pipeline/: __init__.py  streaming.py
rag/: __init__.py  engine.py
rahul/rahul_prev_chat/RAHUL_RAG/: .env  Dockerfile  docker-compose.yml  main.py  requirements.txt
rahul/rahul_prev_chat/RAHUL_RAG/chroma_db/: chroma.sqlite3
rahul/rahul_prev_chat/RAHUL_RAG/data/: defination_rules.txt  explainations.txt  operator_guidelines.txt  process_logic.txt  sop_data_acquisition.txt  sop_kb_update_and_reasoning.txt  sop_load_classification.txt  sop_load_scheduling.txt  sop_text.txt
rahul/rahul_prev_chat/RAHUL_RAG/faiss_index/: index.faiss  index.pkl
rahul/rahul_prev_chat/RAHUL_RAG/src/: chain.py  dataloader.py  datasplitter.py  embedding.py  prompt.py  (+1 more)
saanidhi/: proposal-doc.txt
saanidhi/Frontend/: package-lock.json
saanidhi/Frontend/src/: main.jsx
(+8 files in other folders)
